[gd_scene load_steps=29 format=4 uid="uid://6ikiefbfo276"]

[ext_resource type="Texture2D" uid="uid://mvgkrnayxjlf" path="res://assets/misc/square.png" id="1_x7cxd"]
[ext_resource type="Script" uid="uid://bcge2c21c1gn2" path="res://scripts/tweakingDay/starter_bedroom.gd" id="1_ywlcp"]
[ext_resource type="PackedScene" uid="uid://c8wffxipu48vg" path="res://scenes/player.tscn" id="2_4e1sp"]
[ext_resource type="TileSet" uid="uid://dyf0c38hkcw8q" path="res://apt_tiles.tres" id="3_ywlcp"]
[ext_resource type="Texture2D" uid="uid://bm0b03u6il0ke" path="res://assets/misc/spotlight.png" id="5_sycq6"]
[ext_resource type="Texture2D" uid="uid://b5hki7kvg72vf" path="res://assets/misc/dust_particle.png" id="6_wetsj"]
[ext_resource type="Texture2D" uid="uid://bs7cxyqisn674" path="res://scenes/Days/DayThree/d3.tres" id="7_qrixc"]
[ext_resource type="PackedScene" uid="uid://cth4hylf5dh1y" path="res://scenes/Objects/couch.tscn" id="8_4e1sp"]
[ext_resource type="PackedScene" uid="uid://cpuj6ktdfqhdu" path="res://scenes/change_room.tscn" id="8_r1uqw"]
[ext_resource type="Texture2D" uid="uid://dkcfj3mhkcom4" path="res://assets/Spritesheets/player_idle_right.png" id="9_ywlcp"]
[ext_resource type="PackedScene" uid="uid://dx8tl06100qlm" path="res://scenes/interact_indicator.tscn" id="11_8vob7"]
[ext_resource type="Texture2D" uid="uid://qhcs6stv71ts" path="res://assets/objects/carpet.png" id="12_sycq6"]
[ext_resource type="PackedScene" uid="uid://lyewe0q5cjnt" path="res://scenes/Objects/bed.tscn" id="13_itru7"]
[ext_resource type="PackedScene" uid="uid://c014t28xfb40m" path="res://scenes/Objects/radiator.tscn" id="14_4dpcw"]
[ext_resource type="PackedScene" uid="uid://i08cixlwo7qb" path="res://scenes/Objects/bedsideCabinet.tscn" id="15_3stk4"]
[ext_resource type="PackedScene" uid="uid://bc38krii08k1g" path="res://scenes/Objects/closet_d4.tscn" id="16_tx8ye"]
[ext_resource type="Texture2D" uid="uid://b82wipn7s8aq5" path="res://assets/objects/bedroom_table.png" id="17_osvx4"]
[ext_resource type="Texture2D" uid="uid://jdo75bmqq2qp" path="res://assets/objects/bedroom_chair.png" id="18_ruw7k"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_ud2e0"]
polygon = PackedVector2Array(80, 16, 86, 16, 86, -21, -6, -21, -6, 54, 32, 54, 32, 48, 0, 48, 0, 0, 80, 0)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_h04wv"]
polygon = PackedVector2Array(48, 48, 80, 48, 80, 32, 86, 32, 86, 54, 48, 54)

[sub_resource type="Gradient" id="Gradient_i04c0"]
offsets = PackedFloat32Array(0, 0.7310606)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_itru7"]
gradient = SubResource("Gradient_i04c0")
width = 244
height = 244
fill = 1
fill_from = Vector2(0.5, 0.4871795)

[sub_resource type="Curve" id="Curve_4dpcw"]
_data = [Vector2(0, 0.56320006), 0.0, 0.0, 0, 0, Vector2(0.27480915, 1), 0.0, 0.0, 0, 0, Vector2(0.71374047, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.56320006), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_dsoqk"]
width = 2048
curve = SubResource("Curve_4dpcw")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3stk4"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(38, 30, 1)
direction = Vector3(-1, 0, 0)
spread = 180.0
initial_velocity_min = 0.099999994
initial_velocity_max = 0.5
gravity = Vector3(-1, 2, 0)
scale_curve = SubResource("CurveTexture_dsoqk")
alpha_curve = ExtResource("7_qrixc")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tx8ye"]
size = Vector2(20, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oou0q"]
size = Vector2(20, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kic07"]
size = Vector2(8, 10)

[node name="StarterBedroom" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_ywlcp")

[node name="BlackScreen" type="CanvasLayer" parent="."]
layer = 2

[node name="Sprite2D" type="Sprite2D" parent="BlackScreen"]
modulate = Color(0, 0, 0, 0)
position = Vector2(160.5, 89.99999)
scale = Vector2(327.00003, 188)
texture = ExtResource("1_x7cxd")
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("2_4e1sp")]
visible = false
position = Vector2(57, 24)
speed = 42.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(42, 19)

[node name="Couch" parent="." instance=ExtResource("8_4e1sp")]
position = Vector2(40, 18.549997)

[node name="Player_on_couch" type="Sprite2D" parent="."]
position = Vector2(42, 19.549997)
texture = ExtResource("9_ywlcp")
hframes = 2
frame = 1

[node name="LightOccluder2D2" type="LightOccluder2D" parent="."]
z_index = -1
occluder = SubResource("OccluderPolygon2D_ud2e0")

[node name="LightOccluder2D3" type="LightOccluder2D" parent="."]
z_index = -1
occluder = SubResource("OccluderPolygon2D_h04wv")

[node name="Tiles" type="TileMapLayer" parent="."]
z_index = -1
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAABAAIAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAEAAAAAAAAAAAADAAEAAAAAAAAAAAACAAEAAAAAAAAAAAABAAEAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAAAP//AAADAAEAAAABAP//AAADAAEAAAACAP//AAADAAEAAAADAP//AAADAAEAAAAEAP//AAADAAEAAAD/////AAACAAEAAAAFAP//AAAEAAEAAAAFAP7/AAAEAAAAAAAEAP7/AAADAAAAAAADAP7/AAADAAAAAAACAP7/AAADAAAAAAABAP7/AAADAAAAAAAAAP7/AAADAAAAAAD///7/AAACAAAAAAD//wAAAAACAAIAAAAFAAAAAAAEAAIAAAAFAAIAAAAEAAIAAAD//wIAAAACAAIAAAD//wEAAAACAAIAAAD//wMAAAACAAQAAAAAAAMAAAADAAQAAAABAAMAAAAAAAQAAAAFAAMAAAAEAAQAAAAFAAEAAAAEAAIAAAADAAMAAAABAAQAAAAEAAMAAAADAAQAAAACAAMAAAAFAAMAAAA=")
tile_set = ExtResource("3_ywlcp")
metadata/_edit_lock_ = true

[node name="lrLight" type="PointLight2D" parent="."]
position = Vector2(40, 57)
scale = Vector2(1, 1.0124278)
color = Color(1, 1, 0.8156863, 1)
energy = 0.4
shadow_enabled = true
texture = ExtResource("5_sycq6")

[node name="ambience" type="CanvasModulate" parent="."]
color = Color(0.26741427, 0.21287754, 0.48341787, 1)

[node name="ceilingLight" type="PointLight2D" parent="."]
position = Vector2(41, 19)
scale = Vector2(0.28688523, 0.2622951)
energy = 0.25
range_item_cull_mask = 3
texture = SubResource("GradientTexture2D_itru7")
metadata/_edit_lock_ = true

[node name="dust" type="GPUParticles2D" parent="."]
position = Vector2(40, 15)
amount = 25
texture = ExtResource("6_wetsj")
speed_scale = 0.2
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_3stk4")
metadata/_edit_lock_ = true

[node name="toNext" parent="." instance=ExtResource("8_r1uqw")]
position = Vector2(40, 55)
wanted_room_path = "res://scenes/Days/Tweaking Day/livingroom_remote.tscn"
wanted_player_pos = Vector2(24, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="toNext"]
shape = SubResource("RectangleShape2D_tx8ye")

[node name="InteractIndicator" parent="." instance=ExtResource("11_8vob7")]
modulate = Color(1, 1, 1, 0)
z_index = 1
position = Vector2(42, 6.549999)

[node name="Carpet" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(40, 28.549997)
texture = ExtResource("12_sycq6")

[node name="bed" parent="." instance=ExtResource("13_itru7")]
position = Vector2(8, -2)

[node name="Radiator" parent="." instance=ExtResource("14_4dpcw")]
position = Vector2(2, 27)

[node name="bedsideCabinet" parent="." instance=ExtResource("15_3stk4")]
position = Vector2(23, 1)

[node name="closet" parent="." instance=ExtResource("16_tx8ye")]
position = Vector2(71, -3)

[node name="BedroomTable" type="Sprite2D" parent="."]
position = Vector2(45, 1)
texture = ExtResource("17_osvx4")

[node name="BedroomChair" type="Sprite2D" parent="."]
position = Vector2(45, 7)
texture = ExtResource("18_ruw7k")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(45, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_oou0q")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(45, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_kic07")
